--- a/package.json
+++ b/package.json
@@ -7,5 +7,25 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.12.3",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1"
+  },
+  "dependencies": {
+    "bluebird": "^2.9.30",
+    "express": "^4.13.0",
+    "mongodb": "^2.0.35",
+    "multer": "^0.1.8",
+    "passport": "^0.2.2",
+    "q": "^1.4.1",
+    "socket.io": "^1.3.5",
+    "sqlite3": "^3.0.8",
+    "winston": "^1.0.1",
+    "ws": "^0.7.2"
+  }
 }
