--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "bluebird": "^2.9.30",
+    "commander": "^2.8.1",
+    "commander-plus": "0.0.6",
     "express": "^4.13.0",
     "mongodb": "^2.0.35",
     "multer": "^0.1.8",
